# 15721-s24-catalog1

./: .gitignore  .gitmodules  Cargo.toml  README.md  design_doc.md  final_submission.json
.github/workflows/: build.yml
benchmark_copy/: bench.py
benchmarking/: bench.py
benchmarking_windows/: bench.py
client/: Cargo.toml  index.js  package.json
client/src/: main.rs
rocksdb/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1709078453252855  LOG.old.1709078462036937  MANIFEST-000015
src/: main.rs
src/config/: mod.rs  parameters.rs
src/data_model/: mod.rs
src/database/: database.rs
src/db/: db.rs
src/dto/: column_data.rs  errors.rs  mod.rs  namespace_data.rs  namespace_dto.rs  operator_statistics.rs  rename_request.rs  set_namespace_properties_req.rs  table_data.rs  table_dto.rs
src/handlers/: mod.rs  namespace_handler.rs  table_handler.rs
src/iceberg-structs/: namespace.rs
src/repository/: mod.rs  namespace.rs  table.rs
src/repository/request/: namespace.rs
src/repository/response/: mod.rs  namespace.rs  table.rs
src/routes/: mod.rs  namespace.rs  root.rs  table.rs
src/structs/: error.rs  mod.rs  namespace.rs  table.rs  table_metadata.rs
src/tests/: namespace_test.rs
test/: plot_get_namespace.html  plot_get_table.html  plot_list_namespace.html  plot_list_table.html  plot_random.html  requests_get_table.txt
